	PR exp/11926 	* parser-defs.h (parse_float, parse_c_float): Declare. 	* parse.c (parse_float, parse_c_float): New function. 	* c-exp.y (parse_number): Call parse_c_float. 	* objc-exp.y (parse_number): Ditto. 	* p-exp.y (parse_number): Ditto.  Use ANSI/ISO-style definition. 	* jv-exp.y (parse_number): Call parse_float, fix suffix handling.

testsuite/
	* gdb.base/printcmds.exp (test_float_accepted): New function.
	Move existing float tests there.  Add tests for floats with suffixes.
	(test_float_rejected): New function.
	* gdb.java/jv-print.exp (test_float_accepted): New function.
	(test_float_rejected): New function.
	* gdb.objc/print.exp: New file.
	* gdb.pascal/print.exp: New file.
	* lib/objc.exp: New file.